force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/FLODocs__FLO_Process_Issue__c.object-meta.xml
<CustomObject>
    <description>Used to track process issues.</description>
    <label>Process Issue</label>
    <nameField>
        <label>Process Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>