force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/fields/FLODocs__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Approval_Status__c</fullName>
    <description>This is the approval status of the process issue.</description>
    <inlineHelpText>This is the approval status of the process issue.  Approval is not always required depending on policy of your company.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__Approval_Status</valueSetName>
    </valueSet>
</CustomField>