force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/fields/FLODocs__Approver__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person assigned to approve the process issue. By default, it is the issue owner&apos;s supervisor.</description>
    <inlineHelpText>This is the person assigned to approve the process issue. By default, it is the issue owner&apos;s supervisor.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FLO_Process_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>