force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/fields/FLODocs__Control_Count__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Control_Count__c</fullName>
    <description>This is the number of records represented by this issue.</description>
    <inlineHelpText>This is the number of records represented by this issue.</inlineHelpText>
    <label>Control Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>