force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/fields/FLODocs__Request_Process_Help__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Request_Process_Help__c</fullName>
    <description>This field can be used to direct process issues to an external resource such as the customer&apos;s service provider. The search should be an alert triggered by a change in this field where the result does not equal the default value.</description>
    <inlineHelpText>Completing this field sends a message to FLO or your Salesforce consultant detailing the issue and providing them with access to your relevant process record.</inlineHelpText>
    <label>Request Process Help</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>