force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/listViews/FLODocs__All.listView-meta.xml
<ListView>
    <fullName>FLODocs__All</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Active__c</columns>
    <columns>FLODocs__Approval_Status__c</columns>
    <columns>FLODocs__Approver__c</columns>
    <columns>FLODocs__Assigned__c</columns>
    <columns>FLODocs__Change_Level__c</columns>
    <columns>FLODocs__Control__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>