force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/listViews/FLODocs__Process_Control_Overview_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Process_Control_Overview_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Issue_Description__c</columns>
    <columns>FLODocs__Control__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FLODocs__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed As Process Issue</value>
    </filters>
    <filters>
        <field>FLODocs__Type__c</field>
        <operation>equals</operation>
        <value>Control Log</value>
    </filters>
    <label>Process Control Overview (v2)</label>
</ListView>