force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/listViews/FLODocs__Process_Issues_Alerts_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Process_Issues_Alerts_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Process__c</columns>
    <columns>FLODocs__Assigned__c</columns>
    <columns>FLODocs__Issue_Description__c</columns>
    <columns>FLODocs__Status__c</columns>
    <columns>FLODocs__Parent_Change_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Type__c</field>
        <operation>equals</operation>
        <value>Urgent Issue,Broken Process,Control Log,Script Error</value>
    </filters>
    <filters>
        <field>FLODocs__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed As Process Issue</value>
    </filters>
    <label>Process Issues Alerts (v2)</label>
</ListView>