force-app/main/default/objects/FLODocs__FLO_Process_Issue__c/listViews/FLODocs__Resolved_Process_Issues_2.listView-meta.xml
<ListView>
    <fullName>FLODocs__Resolved_Process_Issues_2</fullName>
    <columns>NAME</columns>
    <columns>FLODocs__Process__c</columns>
    <columns>FLODocs__Issue_Description__c</columns>
    <columns>FLODocs__Type__c</columns>
    <columns>FLODocs__Status__c</columns>
    <columns>FLODocs__Parent_Change_Request__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>FLODocs__Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FLODocs__Status__c</field>
        <operation>equals</operation>
        <value>Completed As Process Issue</value>
    </filters>
    <label>Resolved Process Issues (v2)</label>
</ListView>